platform/cluster/kong/kong.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  namespace: kong
spec:
  type: NodePort
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
      nodePort: 30080
    - name: admin
      port: 8001
      targetPort: 8001
      nodePort: 30081
    - name: proxy-ssl
      port: 8443
      targetPort: 8443
      nodePort: 30443
